# aoc

./: Cargo.toml  shell.nix
2015/: Cargo.toml
2015/src/: lib.rs
2016/: Cargo.toml
2016/day10/: Cargo.toml
2016/day14/src/: main.rs
2016/day15/: day15.rs
2016/day17/: Cargo.toml
2016/day19/: day19.rs
2016/day2/: day2.rs
2016/day20/: day20.rs
2016/day22/src/: main.rs
2016/day25/: Cargo.toml
2016/day4/: Cargo.toml
2016/day6/: day6.rs
2016/day8/: Cargo.toml
2016/day8/src/: main.rs
2017/day1/: Cargo.toml
2017/day1/src/: main.rs
2017/day10/: Cargo.toml
2017/day10/src/: main.rs
2017/day11/: Cargo.toml
2017/day11/src/: main.rs
2017/day12/: Cargo.toml
2017/day12/src/: main.rs
2017/day13/: Cargo.toml
2017/day13/src/: main.rs
2017/day14/: Cargo.toml
2017/day14/src/: main.rs
2017/day15/: Cargo.toml
2017/day15/src/: main.rs
2017/day16/: Cargo.toml
2017/day16/src/: main.rs
2017/day17/: Cargo.toml
2017/day17/src/: main.rs
2017/day18/: Cargo.toml
2017/day18/src/: main.rs
2017/day19/: Cargo.toml
2017/day19/src/: main.rs
2017/day2/: Cargo.toml
2017/day2/src/: main.rs
2017/day20/: Cargo.toml
2017/day20/src/: main.rs
2017/day21/: Cargo.toml
2017/day21/src/: main.rs
2017/day22/: Cargo.toml
2017/day22/src/: main.rs
2017/day23/: Cargo.toml  input.annotated
2017/day23/src/: main.rs
2017/day24/: Cargo.toml
2017/day24/src/: main.rs
2017/day25/: Cargo.toml
2017/day25/src/: main.rs
2017/day3/: Cargo.toml
2017/day3/src/: main.rs
2017/day4/: Cargo.toml
2017/day4/src/: main.rs
2017/day5/: Cargo.toml
2017/day5/src/: main.rs
2017/day6/: Cargo.toml
2017/day6/src/: main.rs
2017/day7/: Cargo.toml
2017/day7/src/: main.rs
2017/day8/: Cargo.toml
2017/day8/src/: main.rs
2017/day9/: Cargo.toml
2017/day9/src/: main.rs
2017/infi/: Cargo.toml  input  input.real  input.test
2017/infi/src/: main.rs
2018/: Cargo.toml
2018/inputs/: day22
2018/src/: lib.rs
2019/: .gitignore  Cargo.toml
2019/src/: intcode.rs  lib.rs
2020/: Cargo.toml
2020/inputs/: day1
2020/src/: lib.rs
2021/: Cargo.toml
2021/src/: lib.rs
2022/: Cargo.toml
2022/inputs/: day15  day16  day18  day19  day22  day4  day9
2022/src/: lib.rs
2023/: Cargo.toml
2023/inputs/: day12  day16  day17  day19  day20
2023/src/: lib.rs
day1/: day1.rs
day10/src/: main.rs
day11/: Cargo.toml  single-threaded.rs
day11/src/: main.rs
day12/: Cargo.toml
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day15/: day15.rs
day17/src/: main.rs
day18/: day18.rs
day21/src/: main.rs
day22/: Cargo.toml
day23/: Cargo.toml
day23/src/: main.rs
day24/: day24.rs
day25/src/: main.rs
day4/: day4.rs
day4/src/: main.rs
day5/: Cargo.toml
