[workspace]
members = [
   "2015",
   "2016",
   "2017/day1",
   "2017/day2",
   "2017/day3",
   "2017/day4",
   "2017/day5",
   "2017/day6",
   "2017/day7",
   "2017/day8",
   "2017/day9",
   "2017/day10",
   "2017/day11",
   "2017/day12",
   "2017/day13",
   "2017/day14",
   "2017/day15",
   "2017/day16",
   "2017/day17",
   "2017/day18",
   "2017/day19",
   "2017/day20",
   "2017/day21",
   "2017/day22",
   "2017/day23",
   "2017/day24",
   "2017/day25",
   "2018",
   "2019",
   "2020",
   "2021",
]
