[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
regex = "1"
lazy_static = "1.4"
permutohedron = "0.2.4"
serde_json = "1"
chrono = "0.4"
parsebyregex = { git = "git://git.gitano.org.uk/parsebyregex.git" }
parsebyregex-derive = { git = "git://git.gitano.org.uk/parsebyregex.git" }
twoway = "0.2"
itertools = "0.10"
num-traits = "0.2"
color-backtrace = "0.5"
modinverse = "0.1"
gcd = "2"
"bitstream-io" = "*"
"memoize" = "0.1"
